<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.login_register.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:scaleType="fitXY"
            android:background="@drawable/bg_register"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_started"
            android:fontFamily="@font/playfair_display_bold"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black_s5"
            android:textSize="32sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="24dp">

            <TextView
                android:id="@+id/tv_regis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textSize="14sp"
                android:layout_marginRight="8dp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/grey_s1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:id="@+id/login"
                android:text="@string/log_in"
                android:textColor="@color/green_1"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_fb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_fb"
            android:fontFamily="@font/poppins_semibold"
            android:height="55dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_fb_variant"
            android:paddingLeft="100dp"
            android:paddingRight="90dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textAllCaps="false"
            android:layout_marginTop="24dp"
            android:textColor="@color/white_s6"
            android:textSize="12dp"
            android:background="@drawable/btn_blue"
            />

        <Button
            android:id="@+id/btn_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_google"
            android:fontFamily="@font/poppins_semibold"
            android:height="55dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_google"
            android:paddingLeft="90dp"
            android:paddingRight="90dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textAllCaps="false"
            android:layout_marginTop="24dp"
            android:textColor="@color/black_s5"
            android:textSize="12dp"
            android:background="@drawable/bg_input"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/ic_line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:fontFamily="@font/poppins_medium"
                android:text="Or"
                android:textColor="@color/grey_s1"
                android:textSize="13sp" />

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:background="@drawable/ic_line" />

        </LinearLayout>

        <EditText
            android:id="@+id/et_uname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_input"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="16dp"
            android:ems="10"
            android:alpha=".8"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:textColor="@color/black_s5"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="16dp"
            android:background="@drawable/bg_input"
            android:padding="16dp"
            android:textSize="14dp"
            android:alpha=".8"
            android:textColor="@color/black_s5"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="15dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:expandedHintEnabled="false"
            app:passwordToggleTint="@color/grey_s2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/poppins_semibold"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="16dp"
                android:background="@drawable/bg_input"
                android:padding="16dp"
                android:textSize="14dp"
                android:alpha=".8"
                android:textColor="@color/black_s5"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:layout_marginBottom="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/cb_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="12sp"
            android:textColorHighlight="@color/green_1"
            android:buttonTint="@color/grey_s1"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/grey_s1"

            android:text="@string/tnc"/>
<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:gravity="end"-->
<!--            android:layout_marginRight="20dp"-->
<!--            android:text="@string/forgot_password"-->
<!--            android:textColor="@color/green_1"-->
<!--            android:textStyle="bold" />-->

        <Button
            android:id="@+id/btn_log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/poppins_semibold"
            android:height="56dp"
            android:enabled="false"
            android:visibility="invisible"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textAllCaps="false"
            android:layout_marginTop="24dp"
            android:textColor="@color/white_s6"
            android:textSize="16dp"
            android:background="@drawable/btn_gradient"
            />
    </LinearLayout>

</ScrollView>