<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login_register.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:scaleType="fitXY"
            android:background="@drawable/bg_login"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:fontFamily="@font/playfair_display_bold"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="24dp"
            android:textColor="@color/black_s5"
            android:textSize="32sp" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/login_details"
            android:layout_marginLeft="20dp"
            android:textColor="@color/grey_s1"
            android:textSize="14sp"/>
<!--        <EditText-->
<!--            android:id="@+id/et_uname"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@drawable/bg_input"-->
<!--            android:ems="10"-->
<!--            android:elevation="4dp"-->
<!--            android:drawableStart="@drawable/ic_email"-->
<!--            android:drawablePadding="7dp"-->
<!--            android:inputType="textPersonName"-->
<!--            android:padding="12dp"-->
<!--            android:textSize="14dp"-->
<!--            android:textColor="@color/black_s5"-->
<!--            android:hint="@string/uname"-->
<!--            android:layout_marginBottom="15dp"/>-->

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:background="@drawable/bg_input"
            android:padding="16dp"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="14dp"
            android:textColor="@color/black_s5"
            android:hint="@string/username"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="7dp"
            android:background="@drawable/bg_input"
            android:padding="16dp"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="14dp"
            android:textColor="@color/black_s5"
            android:hint="@string/pass"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginRight="20dp"
            android:text="@string/forgot_password"
            android:textColor="@color/green_1"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:fontFamily="@font/poppins_semibold"
            android:height="55dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textAllCaps="false"
            android:layout_marginTop="24dp"
            android:textColor="@color/white_s6"
            android:textSize="16dp"
            android:background="@drawable/btn_gradient"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/ic_line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:fontFamily="@font/poppins_medium"
                android:text="Or"
                android:textColor="@color/grey_s1"
                android:textSize="13sp" />

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:background="@drawable/ic_line" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:gravity="center">
            <ImageButton
                android:id="@+id/btn_fb"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_fb"
                android:background="@drawable/bg_input"
                android:textSize="16dp"
                android:layout_marginRight="20dp"/>
            <ImageButton
                android:id="@+id/btn_google"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_google"
                android:background="@drawable/bg_input"
                android:textSize="16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="24dp"
            android:gravity="bottom">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp">

                <TextView
                    android:id="@+id/tv_regis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/don"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/grey_s1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/regis"
                    android:id="@id/tv_regis"
                    android:textColor="@color/green_1"
                    android:textStyle="bold" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

</ScrollView>