<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.nav_fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_s6"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_home">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_hi_uname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/playfair_display_bold"
                        android:text="Hi, Najaem!"
                        android:textColor="@color/black_s5"
                        android:textSize="26sp" />

                    <TextView
                        android:id="@+id/tv_slogan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_hi_uname"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/nunito_bold"
                        android:text="@string/slogan"
                        android:textColor="@color/black_s5"
                        android:textSize="12sp" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_avatar"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="20dp"
                        android:src="@drawable/jw" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@drawable/bg_search_bar"
                    android:drawableEnd="@drawable/ic_search"
                    android:drawablePadding="10dp"
                    android:elevation="2dp"
                    android:ems="10"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="Search"
                    android:inputType="textPersonName"
                    android:paddingStart="14dp"
                    android:paddingTop="14dp"
                    android:paddingEnd="14dp"
                    android:paddingBottom="14dp"
                    android:textColor="@color/black_s5"
                    android:textSize="14dp" />
            </LinearLayout>
        </FrameLayout>




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/explore"
            android:textColor="@color/black_s5"
            android:textSize="18sp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    style="@style/CardMargin"
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="4dp">

                    <ImageView
                        android:id="@+id/img_item_photo2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/black_friday"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/CardMargin"
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    android:layout_marginRight="20dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            style="@style/CardMargin"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center"
                            android:layout_marginRight="20dp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginTop="20dp"
                                android:layout_marginRight="20dp"
                                android:layout_marginBottom="30dp"
                                android:fontFamily="@font/poppins_semibold"
                                android:text="@string/c2"
                                android:textColor="@color/black_s5"
                                android:textSize="15sp" />

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="35dp"
                                android:layout_marginRight="20dp"
                                android:layout_marginBottom="20dp"
                                android:background="@drawable/btn_secondary"
                                android:fontFamily="@font/poppins_semibold"
                                android:text="@string/browser"
                                android:textAllCaps="false"
                                android:textSize="12sp" />
                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </HorizontalScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/for_you"
                android:textColor="@color/black_s5"
                android:textSize="18sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/see_all"
                android:textColor="@color/grey_s1"
                android:textSize="12sp" />
        </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="16dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_buku"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/list_book"/>
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/newest"
                android:textColor="@color/black_s5"
                android:textSize="18sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/see_all"
                android:textColor="@color/grey_s1"
                android:textSize="12sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_item"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            tools:listitem="@layout/item_list" />
    </LinearLayout>
</ScrollView>